--- a/config
+++ b/config
@@ -85,7 +85,7 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+Ctrl+Right workspace next
 bindsym $mod+Ctrl+Left workspace prev
 
-exec_always xrandr --output VIRTUAL1 --off --output eDP1 --mode 1920x1080 --pos 3840x0 --rotate normal --output DP1 --off --output HDMI2 --off --output HDMI1 --primary --mode 3840x2160 --pos 0x0 --rotate normal --output DP2 --off
+#exec_always xrandr --output VIRTUAL1 --off --output eDP1 --mode 1920x1080 --pos 3840x0 --rotate normal --output DP1 --off --output HDMI2 --off --output HDMI1 --primary --mode 3840x2160 --pos 0x0 --rotate normal --output DP2 --off
 
 
 set $monitor_right eDP1
@@ -330,5 +330,14 @@ mode "$mode_kbl" {
    bindsym Escape mode "default"
 }
 bindsym $mod+b mode "$mode_kbl"
+
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q set Master 5%+ unmute && killall -SIGUSR1 i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q set Master 5%- unmute && killall -SIGUSR1 i3status
+bindsym XF86AudioMute exec --no-startup-id amixer -q set Master toggle && killall -SIGUSR1 i3status
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10 -time 0
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10 -time 0
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 
